@@ -1,3 +1,1 @@
-usr/share/man/man1
-usr/share/man/man8
 var/log/shibboleth
