@@ -65,7 +65,7 @@ override_dh_auto_install:
 	mv debian/tmp/etc/shibboleth/keygen.sh debian/tmp/usr/sbin/shib-keygen
 	mv debian/tmp/etc/shibboleth/metagen.sh debian/tmp/usr/bin/shib-metagen
 	mv debian/tmp/etc/shibboleth/shibd-debian \
-	    debian/libapache2-mod-shib2.shibd.init
+	    debian/shibboleth-sp2-utils.shibd.init
 	mkdir debian/tmp/usr/include/$(DEB_HOST_MULTIARCH)/shibsp
 	mv debian/tmp/usr/include/shibsp/paths.h \
 	    debian/tmp/usr/include/$(DEB_HOST_MULTIARCH)/shibsp/
@@ -76,19 +76,19 @@ override_dh_install:
 	    debian/tmp/usr/lib/apache2/modules/mod_shib2.so
 	pod2man debian/man-pages/mdquery.pod --section 1		\
 	    --center 'Shibboleth' --release $(VERSION)			\
-	    debian/libapache2-mod-shib2/usr/share/man/man1/mdquery.1
+	    debian/shibboleth-sp2-utils/usr/share/man/man1/mdquery.1
 	pod2man debian/man-pages/resolvertest.pod --section 1		  \
 	    --center 'Shibboleth' --release $(VERSION)			  \
-	    debian/libapache2-mod-shib2/usr/share/man/man1/resolvertest.1
+	    debian/shibboleth-sp2-utils/usr/share/man/man1/resolvertest.1
 	pod2man debian/man-pages/shib-metagen.pod --section 1		  \
 	    --center 'Shibboleth' --release $(VERSION)			  \
-	    debian/libapache2-mod-shib2/usr/share/man/man1/shib-metagen.1
+	    debian/shibboleth-sp2-utils/usr/share/man/man1/shib-metagen.1
 	pod2man debian/man-pages/shib-keygen.pod --section 8		 \
 	    --center 'Shibboleth' --release $(VERSION)			 \
-	    debian/libapache2-mod-shib2/usr/share/man/man8/shib-keygen.8
+	    debian/shibboleth-sp2-utils/usr/share/man/man8/shib-keygen.8
 	pod2man debian/man-pages/shibd.pod --section 8			\
 	    --center 'Shibboleth' --release $(VERSION)			\
-	    debian/libapache2-mod-shib2/usr/share/man/man8/shibd.8
+	    debian/shibboleth-sp2-utils/usr/share/man/man8/shibd.8
 	dh_install -s -i -X mod_shib2.so --fail-missing
 
 override_dh_installchangelogs:
