@@ -1,1 +1,1 @@
-debian/tmp/usr/share/xml/shibboleth
+usr/share/xml/shibboleth
