@@ -1,0 +1,2 @@
+usr/share/man/man1
+usr/share/man/man8
