@@ -6,6 +6,11 @@ shibboleth-sp2 (2.5.3+dfsg-1) UNRELEASED; urgency=medium
     - Fix preserved POST data size limit enforcement.
     - Fix POST data replay if a submit key is present.
     - Fix support for idpHistoryProps in Sessions.
+  * Split shibboleth-sp2-common and shibboleth-sp2-utils packages off of
+    libapache2-mod-shib2.  shibboleth-sp2-common contains the
+    configuration, which is also required by the shared library.
+    shibboleth-sp2-utils contains the shibd daemon plus the other utility
+    commands that were in libapache2-mod-shib2.
   * Move /usr/include/shibsp/paths.h to the architecture-specific include
     directory, since it varies by architecture.  Thanks, Andreas
     Beckmann.  (Closes: #720036)
